Bug 117470 - EDITING Draw crashes when color dialog's parent is closed and OK is clicked in color dialog (not gtk3)
Summary: EDITING Draw crashes when color dialog's parent is closed and OK is clicked i...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-05-07 06:39 UTC by Emil Tanev
Modified: 2018-05-09 14:51 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (6.28 KB, text/plain)
2018-05-07 09:18 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emil Tanev 2018-05-07 06:39:41 UTC
Open Draw
Insert a shape
Right-click the shape - Convert to 3D
Right-click - 3D Effects
Choose Material
Open a Color dialog
Close the 3D Effects window via X
Click OK in the Color dialog

Issue: Crashes

https://screencast-o-matic.com/watch/cFhi14bOeB

Version: 6.1.0.0.alpha1+ (x64)
Build ID: 08441d466dd70c203a519a133aaf1a5997adbbd3
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-05-07_01:12:11
Locale: en-US (en_US); Calc: group
Comment 1 Xisco Faulí 2018-05-07 08:28:57 UTC
I can reproduce it in

Version: 6.1.0.0.alpha1+
Build ID: 213f12be2cab2106dde4a0e859faaa8259627c1a
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 6.1.0.0.alpha1+
Build ID: 213f12be2cab2106dde4a0e859faaa8259627c1a
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 2 Xisco Faulí 2018-05-07 09:17:26 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2018-03-08 12:17:56 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-03-11 21:34:45 +0100
commit cf4b65c75c07142be0fcab5835188a28e839b749 (patch)
tree 41b2bd5cd5d419f33db3839c93b9e674a193c2c1
parent e0e307675cc2b962d0dcb557f4af4a34a729da66 (diff)
weld color picker

Bisected with: bibisect-linux64-6.1

Adding Cc: to Caolán McNamara
Comment 3 Julien Nabet 2018-05-07 09:18:02 UTC
Created attachment 141947 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this but I had to use rendering=gen.
With gtk3, I can't reproduce this because it's not possible to close the 3D dialog box before having closed color picker dialog.
Comment 4 Commit Notification 2018-05-08 14:06:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bfcf57de81ddd5ed8544ff2ede23bd8428f0c0ce

Resolves: tdf#117470 reuse parent window of colorwindow...

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2018-05-08 14:21:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ccbb507002b2bf20689def23066521506a1e9c2b

Related: tdf#117470 docking windows are toplevels

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2018-05-08 14:22:23 UTC
that seems to work
Comment 7 Julien Nabet 2018-05-09 14:51:36 UTC
With master sources updated today, I don't reproduce the crash.
I can click the cross to close the 3D Effects dialog, it won't close it while color picker dialog is opened.