Related: tdf#117470 docking windows are toplevels

but are not system windows according to vcl

Change-Id: I7f404acc82ca51520b4fabd4d8a06769dc0f0fee
Reviewed-on: https://gerrit.libreoffice.org/53971
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>